将 demo 移至测试